# jdrift

./: .gitignore  README.md  cargo.toml
jdrift-interface/: Cargo.toml
jdrift-interface/examples/: winbuffer.rs  window.rs
jdrift-interface/src/: center.rs  lib.rs  renderer.rs  server.rs
jdrift-interface/src/center/: element.rs  message.rs
jdrift-interface/src/center/element/: builder.rs  canvas.rs  container.rs  event.rs  text.rs
jdrift-interface/src/renderer/: fill.c  opencl.rs  shape.rs  vec2.rs
jdrift-server/: package-lock.json  package.json  tsconfig.json
jdrift-server/src/: .gitignore  build.js  index.html  load.css  main.js  main.ts
jdrift-server/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
jdrift-server/src-tauri/src/: main.rs
jdrift-server/src/main/: create.ts  delete.ts  set_property.ts  set_text.ts
src/: renderer.rs
src/center/element/: container.rs
src/renderer/: vec2.rs
