[package]
name = "jdrift-interface"
version = "0.1.0"
edition = "2021"

[dependencies]
ocl = "0.19.7"
paste = "1.0.15"
softbuffer = { version = "0.4.6" }
thiserror = "1.0.64"
tungstenite = "0.24.0"
winit = "0.30.5"
xbinser = "0.1.3"
xbinser-macros = "0.1.1"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_UI_WindowsAndMessaging", "Win32_Graphics",
    "Win32_Graphics_Gdi", "Win32_System",
    "Win32_System_LibraryLoader", "Win32_UI_Controls",
    "Win32_Graphics_Dwm"
]
